Deleted commented out notes/code in App.js and footer.css. Played around with css until the text no longer overflowed on smaller screens.

--- a/src/App.css
+++ b/src/App.css
@@ -22,26 +22,4 @@ p, li, ul{
 
 .App {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
-
-
-
-
-/* 
-        BRAND COLORS
-#276BE5 
--main color
-#6474ED 
--button color 
-#A4C1F4 
--accent color
-#E8EFFC 
--background color
-#EDBB64 
--accent color 2 / button style backup
-#ED6495 
--accent color 3
-*/
