--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -7,6 +7,7 @@
   background-color: #6495ED;
   color: black;
 }
+
 .footer-wave-svg {
   background-color: transparent;
   display: block;
@@ -26,7 +27,6 @@
   padding: 40px 15px 450px;
   position: relative;
 }
-
 .footer-content-column {
   box-sizing: border-box;
   float: left;
@@ -34,17 +34,14 @@
   padding-right: 15px;
   width: 100%;
 }
-
 .footer-content-column ul li a {
 color: black;
 text-decoration: none;
-
 }
 
 .footer-menu {
   margin-top: 30px;
 }
-
 .footer-menu-name {
   /* color: #FFFAEB; */
   font-size: 15px;
@@ -70,8 +67,6 @@ text-decoration: none;
   margin-top: 10px;
   margin-bottom: 20px;
 }
-
-
 .footer-call-to-action {
   margin-top: 30px;
 }
@@ -95,7 +90,6 @@ text-decoration: none;
   color: #FFFAEB;
   text-decoration: none;
 }
-
 .call-to-action-signup-link {
   background:#ED6495; 
   color: white;
@@ -107,7 +101,6 @@ text-decoration: none;
   transition: background-color 0.3s, color 0.3s;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
-
 .call-to-action-signup-link:hover {
   background:white; 
   color: #ED6495;
@@ -144,23 +137,13 @@ text-decoration: none;
   transition: fill .2s;
 }
 
-
 .button:last-of-type {
   margin-right: 0;
 }
 
 
 /* Media Query For different screens */
-@media (min-width:320px) and (max-width:479px)  { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
-.footer-content {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1230px;
-  padding: 40px 15px 500px;
-  position: relative;
-}
-}
-@media (min-width:480px) and (max-width:599px)  { /* smartphones, Android phones, landscape iPhone */
+@media (min-width:320px) and (max-width:599px)  { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
 .footer-content {
   margin-left: auto;
   margin-right: auto;
@@ -181,7 +164,10 @@ text-decoration: none;
 
 @media (max-width:800px) {
   .footer-content {
-    padding:40px 15px;
+    padding:40px 15px 50%;
+  }
+  .footer-menu-name, .footer-menu-list {
+    font-size: smaller; /* Adjust as needed */
   }
 }
 
@@ -207,171 +193,3 @@ text-decoration: none;
     width: 49.99%;
 } */
 }
-
-/* Code not being used:
-
-
-.footer-call-to-action-button {
-  background-color: #ffaf28;
-  border-radius: 21px;
-  border: 2px solid #FFFAEB;
-  color: #FFFAEB;
-  font-weight: bold;
-  display: inline-block;
-  font-size: 1rem;
-  font-weight: 900;
-  font-weight: bold;
-  letter-spacing: .1em;
-  line-height: 18px;
-  padding: 10px 20px;
-  margin: 0 10px 10px 0;
-  text-decoration: none;
-  transition: color 0.3s, background-color .3s, transform 0.3s;
-  cursor: pointer;
-  position: relative;
-}
-
-
-.footer-call-to-action-button:hover {
-  color: #E66000;
-  background: #FFFAEB;
-  transform: translateY(-2px);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-.footer-call-to-action-button:hover {
-  background-color: #fffaeb;
-  color: #545454;
-}
-
-
-
-.footer-copyright {
-  background-color: #027b9a;
-  color: #fff;
-  padding: 15px 30px;
-text-align: center;
-} */
-
-/* .footer-copyright-wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
-}
-
-.footer-copyright-text {
-color: #fff;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 18px;
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
-.footer-copyright-link {
-  color: #fff;
-  text-decoration: none;
-}
- */
-
-
-
-/* ============ */
-
-/* 
-a:focus,a:hover {
- text-decoration:none;
- -webkit-transition:.3s ease;
- -o-transition:.3s ease;
- transition:.3s ease
-}
-a:focus {
- outline:0
-}
-img {
- max-width:100% */
-/* } */
-
-/* =============== */
-
-  /* .logo {
-    background-color: #e66000;
-    height: 50px;
-    width: 80px;
-    margin-left: 10%;
-    padding: 10px;
-    text-align: center;
-    vertical-align: middle;
-  }
-  
-  @keyframes move {
-    100% {
-      offset-distance: 100%;
-    }
-  } */
-
-
-
-/* .footer-social-links {
-  bottom: 0;
-  height: 54px;
-  position: absolute;
-  right: 0;
-  width: 236px;
-}
-
-.footer-social-amoeba-svg {
-  height: 54px;
-  left: 0;
-  display: block;
-  position: absolute;
-  top: 0;
-  width: 236px;
-} 
-
-.footer-social-amoeba-path {
-  fill: #027b9a;
-}
-
-.footer-social-link.linkedin {
-  height: 26px;
-  left: 3px;
-  top: 11px;
-  width: 26px;
-}
-
-.footer-social-link {
-  display: block;
-  padding: 10px;
-  position: absolute;
-} */
-
-
-/* .footer-social-link.twitter {
-  height: 28px;
-  left: 62px;
-  top: 3px;
-  width: 28px;
-}
-
-.footer-social-link.github {
-  height: 34px;
-  left: 172px;
-  top: 7px;
-  width: 34px;
-} 
-
-
-
-.footer-logo-link {
-  display: inline-block;
-  width: 100px;
-  height: auto; 
-}
-
-.logo-img {
-  width: 100px; 
-  height: auto; 
-}
-
-
-*/
